Bug 127013 - fullScreen property operates inconsistently for frames, patch by Michael Ventnor, r+sr=jst